@@ -5,7 +5,10 @@ import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertTrue;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 
 import javax.sql.DataSource;
 
@@ -25,6 +28,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import ar.edu.itba.paw.models.Interest;
 import ar.edu.itba.paw.models.Page;
+import ar.edu.itba.paw.models.User;
 import ar.edu.itba.paw.persistence.InterestJdbcDao;
 
 @Transactional
@@ -33,9 +37,13 @@ import ar.edu.itba.paw.persistence.InterestJdbcDao;
 @ContextConfiguration(classes = TestConfig.class)
 public class InterestJdbcDaoTest {
 
-    private static Long USER_ID;
-    private static Long INTEREST_1_ID;
-    private static Long INTEREST_2_ID;
+    private static User USER_1;
+    private static User USER_2;
+    private static Interest INTEREST_1;
+    private static Interest INTEREST_2;
+    private static Interest INTEREST_3;
+    Map<Long, String> interestParams;
+
 
     @Autowired
     private DataSource ds;
@@ -53,23 +61,23 @@ public class InterestJdbcDaoTest {
         insertInterest = new SimpleJdbcInsert(ds).withTableName(TestUtils.INTEREST_TABLE).usingGeneratedKeyColumns("id");
         insertUserInterest = new SimpleJdbcInsert(ds).withTableName(TestUtils.USER_INTEREST_TABLE);   
 
-        jdbcTemplate.execute("INSERT INTO users(username, email, firstname, lastname, university, career_id, profile_picture_id) VALUES('username', 'user@name.com', 'user', 'name', (SELECT id FROM universities WHERE abbreviation = 'ITBA'), (SELECT id FROM careers LIMIT 1), (SELECT id FROM images LIMIT 1))");
-
-        USER_ID = jdbcTemplate.queryForObject("SELECT id FROM users LIMIT 1", Long.class);
-        INTEREST_1_ID = jdbcTemplate.queryForObject("SELECT id FROM category WHERE name = ?", Long.class, TestUtils.INTEREST_1_NAME);
-        INTEREST_2_ID = jdbcTemplate.queryForObject("SELECT id FROM category WHERE name = ?", Long.class, TestUtils.INTEREST_2_NAME);
+        USER_1 = jdbcTemplate.queryForObject(TestUtils.USER_SELECT_BY_EMAIL, TestUtils.USER_ROW_MAPPER, TestUtils.USER_1_MAIL);
+        USER_2 = jdbcTemplate.queryForObject(TestUtils.USER_SELECT_BY_EMAIL, TestUtils.USER_ROW_MAPPER, TestUtils.USER_2_MAIL);
+        INTEREST_1 = jdbcTemplate.queryForObject(TestUtils.INTEREST_SELECT_BY_NAME, TestUtils.INTEREST_ROW_MAPPER, TestUtils.INTEREST_1_NAME);
+        INTEREST_2 = jdbcTemplate.queryForObject(TestUtils.INTEREST_SELECT_BY_NAME, TestUtils.INTEREST_ROW_MAPPER, TestUtils.INTEREST_2_NAME);
+        INTEREST_3 = jdbcTemplate.queryForObject(TestUtils.INTEREST_SELECT_BY_NAME, TestUtils.INTEREST_ROW_MAPPER, TestUtils.INTEREST_3_NAME);
+        interestParams = Map.of(INTEREST_1.getId(), INTEREST_1.getName(), INTEREST_2.getId(), INTEREST_2.getName(), INTEREST_3.getId(), INTEREST_3.getName());
     }
-
 
 
     @Test
     public void testFindById(){
-        Optional<Interest> maybeInterest = interestDao.findById(INTEREST_1_ID);
+        Optional<Interest> maybeInterest = interestDao.findById(INTEREST_1.getId());
 
         assertNotNull(maybeInterest);
         assertTrue(maybeInterest.isPresent());
         Interest interest = maybeInterest.get();
-        assertEquals(INTEREST_1_ID.longValue(), interest.getId().longValue());
+        assertEquals(INTEREST_1.getId(), interest.getId());
         assertEquals(TestUtils.INTEREST_1_NAME, interest.getName());
     }
     @Test
@@ -80,46 +88,21 @@ public class InterestJdbcDaoTest {
         assertFalse(maybeInterest.isPresent());
     }
 
+
+
     @Test
-    public void testFindAll(){
-        List<Interest> interests = interestDao.findAll();
+    public void testFindByUserId(){        
+        List<Interest> interests = interestDao.findByUserId(USER_1.getId());
 
         assertNotNull(interests);
-        assertEquals(2, interests.size());
-        //TODO if-else
+        assertEquals(TestUtils.USER_1_INTERESTS, interests.size());
         for (Interest i : interests){
-            if (i.getId() == INTEREST_1_ID) {
-                assertEquals(TestUtils.INTEREST_1_NAME, i.getName());
-            } else {
-                assertEquals(INTEREST_2_ID.longValue(), i.getId().longValue());
-                assertEquals(TestUtils.INTEREST_2_NAME, i.getName());
-            }
+            assertEquals(interestParams.get(i.getId()), i.getName());
         }
-    }
-    @Test    
-    public void testFindAllNoInterests(){
-        JdbcTestUtils.deleteFromTables(jdbcTemplate, TestUtils.INTEREST_TABLE);
-
-        List<Interest> interests = interestDao.findAll();
-
-        assertNotNull(interests);
-        assertEquals(0, interests.size());
-    }
-
-    @Test
-    public void testFindByUserId(){
-        insertUserInterest.execute(Map.of("user_id", USER_ID, "category_id", INTEREST_1_ID, "score", 0));
-        
-        List<Interest> interests = interestDao.findByUserId(USER_ID);
-
-        assertNotNull(interests);
-        assertEquals(1, interests.size());
-        assertEquals(INTEREST_1_ID.longValue(), interests.getFirst().getId().longValue());
-        assertEquals(TestUtils.INTEREST_1_NAME, interests.getFirst().getName());
     }
     @Test
     public void testFindByUserIdNoUserInterests(){
-        List<Interest> interests = interestDao.findByUserId(USER_ID);
+        List<Interest> interests = interestDao.findByUserId(USER_2.getId());
 
         assertNotNull(interests);
         assertEquals(0, interests.size());
@@ -132,7 +115,7 @@ public class InterestJdbcDaoTest {
         assertNotNull(maybeInterest);
         assertTrue(maybeInterest.isPresent());
         Interest interest = maybeInterest.get();
-        assertEquals(INTEREST_1_ID.longValue(), interest.getId().longValue());
+        assertEquals(INTEREST_1.getId(), interest.getId());
         assertEquals(TestUtils.INTEREST_1_NAME, interest.getName());
     }
     @Test
@@ -143,52 +126,7 @@ public class InterestJdbcDaoTest {
         assertFalse(maybeInterest.isPresent());
     }
 
-    @Test
-    public void testFindIdByName(){
-        insertInterest.execute(Map.of("name", TestUtils.INTEREST_NEW1_NAME));
-        List<String> query = List.of( TestUtils.INTEREST_1_NAME, TestUtils.INTEREST_2_NAME);
-        List<Interest> interests = interestDao.findIdByName(query);
 
-        assertNotNull(interests);
-        assertEquals(2, interests.size());
-        for (Interest i : interests){
-            List.of(query).contains(i.getName());
-        }
-    }
-    @Test
-    public void testFindIdByNameSomeNamesNotFound(){
-        List<String> query = List.of( TestUtils.INTEREST_1_NAME, TestUtils.INTEREST_2_NAME, TestUtils.INTEREST_NEW2_NAME);
-        List<Interest> interests = interestDao.findIdByName(query);
-
-        assertNotNull(interests);
-        assertEquals(2, interests.size());
-    }
-    @Test
-    public void testFindIdByNameMissingNames(){
-        List<Interest> interests = interestDao.findIdByName(null);
-
-        assertNotNull(interests);
-        assertEquals(0, interests.size());
-    }
-    @Test 
-    public void testFindIdByNameEmptyNames(){
-        List<Interest> interests = interestDao.findIdByName(new ArrayList<>());
-
-        assertNotNull(interests);
-        assertEquals(0, interests.size());
-    }
-    @Test(expected = IllegalArgumentException.class)
-    public void testFindIdByNameMissingNameInArray(){
-        List<String> query = List.of(TestUtils.INTEREST_1_NAME, TestUtils.INTEREST_2_NAME, null);
-
-        interestDao.findIdByName(query);
-    }
-    @Test(expected = IllegalArgumentException.class)
-    public void testFindIdByNameEmptyNameInArray(){
-        List<String> query = List.of(TestUtils.INTEREST_1_NAME, TestUtils.INTEREST_2_NAME, "");
-
-        interestDao.findIdByName(query);
-    }
 
     @Test
     public void testCreateUserInterest(){
@@ -203,13 +141,12 @@ public class InterestJdbcDaoTest {
     }
     @Test(expected = DataAccessException.class)
     public void testCreateUserInterestDuplicate(){
-        insertInterest.execute(Map.of("name", TestUtils.INTEREST_1_NAME));
         interestDao.createUserInterest(TestUtils.INTEREST_1_NAME);
     }
 
     @Test
     public void testDeleteUserInterest(){
-        interestDao.deleteUserInterest(INTEREST_1_ID);
+        interestDao.deleteUserInterest(INTEREST_1.getId());
 
         assertEquals(TestUtils.TOTAL_INTERESTS - 1, JdbcTestUtils.countRowsInTable(jdbcTemplate, TestUtils.INTEREST_TABLE));
     }
@@ -217,59 +154,56 @@ public class InterestJdbcDaoTest {
     public void testDeleteUserInterestWrongInterest(){   
         interestDao.deleteUserInterest(12341234);
 
-        assertEquals(2, JdbcTestUtils.countRowsInTable(jdbcTemplate, TestUtils.INTEREST_TABLE));
+        assertEquals(TestUtils.TOTAL_INTERESTS, JdbcTestUtils.countRowsInTable(jdbcTemplate, TestUtils.INTEREST_TABLE));
     }
 
     @Test
     public void testEditUserInterest(){
-        interestDao.editUserInterest(INTEREST_1_ID, TestUtils.INTEREST_NEW1_NAME);
+        interestDao.editUserInterest(INTEREST_1.getId(), TestUtils.INTEREST_NEW1_NAME);
 
-        Optional<Interest> maybeInterest = jdbcTemplate.query(
-            "SELECT * FROM category", 
-            (rs, rowNum) -> new Interest(rs.getLong("id"), rs.getString("name"))
-        ).stream().findFirst();
-
-        assertNotNull(maybeInterest);
-        assertTrue(maybeInterest.isPresent());
-        assertEquals(INTEREST_1_ID.longValue(), maybeInterest.get().getId().longValue());
-        assertEquals(TestUtils.INTEREST_NEW1_NAME, maybeInterest.get().getName());
+        Interest interest = jdbcTemplate.queryForObject(
+            TestUtils.INTEREST_SELECT_BY_ID, 
+            TestUtils.INTEREST_ROW_MAPPER, 
+            INTEREST_1.getId()
+        );
+        assertNotNull(interest);
+        assertEquals(INTEREST_1.getId(), interest.getId());
+        assertEquals(TestUtils.INTEREST_NEW1_NAME, interest.getName());
     }
     @Test
     public void testEditUserInterestNotFound(){
         interestDao.editUserInterest(12341234, TestUtils.INTEREST_1_NAME);
 
-        Optional<Interest> maybeInterest = jdbcTemplate.query(
-            "SELECT * FROM category", 
-            (rs, rowNum) -> new Interest(rs.getLong("id"), rs.getString("name"))
-        ).stream().findFirst();
+        List<Interest> interests = jdbcTemplate.query(TestUtils.INTEREST_SELECT + "ORDER BY id ASC", TestUtils.INTEREST_ROW_MAPPER);
 
-        assertNotNull(maybeInterest);
-        assertTrue(maybeInterest.isPresent());
-        assertEquals(INTEREST_1_ID.longValue(), maybeInterest.get().getId().longValue());
-        assertEquals(TestUtils.INTEREST_1_NAME, maybeInterest.get().getName());
+        assertNotNull(interests);
+        assertEquals(TestUtils.TOTAL_INTERESTS, interests.size());
+        assertEquals(INTEREST_1.getId(), interests.get(0).getId());
+        assertEquals(TestUtils.INTEREST_1_NAME, interests.get(0).getName());
+        assertEquals(INTEREST_2.getId(), interests.get(1).getId());
+        assertEquals(TestUtils.INTEREST_2_NAME, interests.get(1).getName());
     }
 
-    @SuppressWarnings("unlikely-arg-type")
     @Test
     public void testSaveUserInterests(){
-        long[] array = new long[3];
-        array[0] = INTEREST_1_ID;
-        array[1] = INTEREST_2_ID;
-        array[2] = insertInterest.executeAndReturnKey(Map.of("name", TestUtils.INTEREST_NEW1_NAME)).longValue();
+        List<Long> ids = new ArrayList<>();
+        ids.add(INTEREST_1.getId());
+        ids.add(INTEREST_2.getId());
+        ids.add(INTEREST_3.getId());
         
-        interestDao.saveUserInterests(array, USER_ID);
+        interestDao.saveUserInterests(ids.stream().mapToLong(l->l).toArray(), USER_2.getId());
 
-        assertEquals(3, JdbcTestUtils.countRowsInTable(jdbcTemplate, TestUtils.USER_INTEREST_TABLE));
+        assertEquals(TestUtils.TOTAL_USER_INTERESTS + 3, JdbcTestUtils.countRowsInTable(jdbcTemplate, TestUtils.USER_INTEREST_TABLE));
         List<Interest> interests = jdbcTemplate.query("""
-            SELECT cat.id as id, cat.name as name
-            FROM category cat INNER JOIN user_interest ui ON ui.category_id = cat.id 
+            SELECT cat.id as interest_id, cat.name as interest_name
+            FROM category cat JOIN user_interest ui ON ui.category_id = cat.id 
             WHERE ui.user_id = ? """,
-            (rs, rowNum) -> new Interest(rs.getLong("id"), rs.getString("name")), USER_ID
+            TestUtils.INTEREST_ROW_MAPPER, USER_2.getId()
         );
         assertNotNull(interests);
-        assertEquals(3, interests.size());
+        assertEquals(ids.size(), interests.size());
         for (Interest i : interests){
-            Arrays.asList(array).contains(i.getId());
+            ids.contains(i.getId());
         }
     }
     @Test(expected = DataAccessException.class)
@@ -279,114 +213,108 @@ public class InterestJdbcDaoTest {
         array[1] = insertInterest.executeAndReturnKey(Map.of("name", TestUtils.INTEREST_2_NAME)).longValue();
         array[2] = 12341234;
         
-        interestDao.saveUserInterests(array, USER_ID);
+        interestDao.saveUserInterests(array, USER_1.getId());
     }
     @Test
     public void testSaveUserInterestsEmptyInterests(){
-        long[] array = new long[0];
-
-        interestDao.saveUserInterests(array, USER_ID);
+        interestDao.saveUserInterests(new long[0], USER_1.getId());
         
-        assertEquals(2, JdbcTestUtils.countRowsInTable(jdbcTemplate, TestUtils.INTEREST_TABLE));
-        assertEquals(0, JdbcTestUtils.countRowsInTable(jdbcTemplate, TestUtils.USER_INTEREST_TABLE));
+        assertEquals(TestUtils.TOTAL_INTERESTS, JdbcTestUtils.countRowsInTable(jdbcTemplate, TestUtils.INTEREST_TABLE));
+        assertEquals(TestUtils.TOTAL_USER_INTERESTS, JdbcTestUtils.countRowsInTable(jdbcTemplate, TestUtils.USER_INTEREST_TABLE));
     }
 
     @Test
     public void testUpdateScoreByInterest(){
-        insertUserInterest.execute(Map.of("user_id", USER_ID, "category_id", INTEREST_1_ID, "score", 0));
-        insertUserInterest.execute(Map.of("user_id", USER_ID, "category_id", INTEREST_2_ID, "score", 3));
+        insertUserInterest.execute(Map.of("user_id", USER_2.getId(), "category_id", INTEREST_1.getId(), "score", 0));
+        insertUserInterest.execute(Map.of("user_id", USER_2.getId(), "category_id", INTEREST_2.getId(), "score", 3));
         
-        interestDao.updateScoreByInterest(new Interest(INTEREST_1_ID, null), USER_ID);
+        interestDao.updateScoreByInterest(INTEREST_1, USER_2.getId());
 
-        assertEquals(1, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ?", Integer.class, INTEREST_1_ID).intValue());
-        assertEquals(3, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ?", Integer.class, INTEREST_2_ID).intValue());
+        assertEquals(1, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ? AND user_id = ?", Integer.class, INTEREST_1.getId(), USER_2.getId()).intValue());
+        assertEquals(3, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ? AND user_id = ?", Integer.class, INTEREST_2.getId(), USER_2.getId()).intValue());
     }
     @Test
     public void testUpdateScoreByInterest2(){
-        insertUserInterest.execute(Map.of("user_id", USER_ID, "category_id", INTEREST_1_ID, "score", 0));
-        insertUserInterest.execute(Map.of("user_id", USER_ID, "category_id", INTEREST_2_ID, "score", 3));
+        insertUserInterest.execute(Map.of("user_id", USER_2.getId(), "category_id", INTEREST_1.getId(), "score", 0));
+        insertUserInterest.execute(Map.of("user_id", USER_2.getId(), "category_id", INTEREST_2.getId(), "score", 3));
         
-        interestDao.updateScoreByInterest(new Interest(INTEREST_2_ID, null), USER_ID);
+        interestDao.updateScoreByInterest(INTEREST_2, USER_2.getId());
 
-        assertEquals(0, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ?", Integer.class, INTEREST_1_ID).intValue());
-        assertEquals(4, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ?", Integer.class, INTEREST_2_ID).intValue());
+        assertEquals(0, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ? AND user_id = ?", Integer.class, INTEREST_1.getId(), USER_2.getId()).intValue());
+        assertEquals(4, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ? AND user_id = ?", Integer.class, INTEREST_2.getId(), USER_2.getId()).intValue());
     }
     @Test
     public void testUpdateScoreByInterestWrongInterest(){
-        insertUserInterest.execute(Map.of("user_id", USER_ID, "category_id", INTEREST_1_ID, "score", 0));
-        insertUserInterest.execute(Map.of("user_id", USER_ID, "category_id", INTEREST_2_ID, "score", 3));
+        insertUserInterest.execute(Map.of("user_id", USER_2.getId(), "category_id", INTEREST_1.getId(), "score", 0));
+        insertUserInterest.execute(Map.of("user_id", USER_2.getId(), "category_id", INTEREST_2.getId(), "score", 3));
         
-        interestDao.updateScoreByInterest(new Interest((long)12341234, null), USER_ID);
+        interestDao.updateScoreByInterest(new Interest((long)12341234, null), USER_1.getId());
 
-        assertEquals(0, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ?", Integer.class, INTEREST_1_ID).intValue());
-        assertEquals(3, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ?", Integer.class, INTEREST_2_ID).intValue());
+        assertEquals(0, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ? AND user_id = ?", Integer.class, INTEREST_1.getId(), USER_2.getId()).intValue());
+        assertEquals(3, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ? AND user_id = ?", Integer.class, INTEREST_2.getId(), USER_2.getId()).intValue());
     }
     @Test
     public void testUpdateScoreByInterestWrongUser(){
-        insertUserInterest.execute(Map.of("user_id", USER_ID, "category_id", INTEREST_1_ID, "score", 0));
-        insertUserInterest.execute(Map.of("user_id", USER_ID, "category_id", INTEREST_2_ID, "score", 3));
-        
-        interestDao.updateScoreByInterest(new Interest(INTEREST_1_ID, null), (long)12341234);
+        interestDao.updateScoreByInterest(INTEREST_1, (long)12341234);
 
-        assertEquals(0, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ?", Integer.class, INTEREST_1_ID).intValue());
-        assertEquals(3, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ?", Integer.class, INTEREST_2_ID).intValue());
+        assertEquals(TestUtils.USER_1_INTEREST_1_SCORE, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ? AND user_id = ?", Integer.class, INTEREST_1.getId(), USER_1.getId()).intValue());
+        assertEquals(TestUtils.USER_1_INTEREST_2_SCORE, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ? AND user_id = ?", Integer.class, INTEREST_2.getId(), USER_1.getId()).intValue());
+        assertEquals(TestUtils.USER_1_INTEREST_3_SCORE, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ? AND user_id = ?", Integer.class, INTEREST_3.getId(), USER_1.getId()).intValue());
     }
 
     @Test
     public void testUpdateScoreByInterestsMultiple(){
-        long id3 = insertInterest.executeAndReturnKey(Map.of("name", TestUtils.INTEREST_NEW1_NAME)).longValue();
-        insertUserInterest.execute(Map.of("user_id", USER_ID, "category_id", INTEREST_1_ID, "score", 0));
-        insertUserInterest.execute(Map.of("user_id", USER_ID, "category_id", INTEREST_2_ID, "score", 3));
-        insertUserInterest.execute(Map.of("user_id", USER_ID, "category_id", id3, "score", 3));
-        List<Interest> interests = List.of(new Interest(INTEREST_1_ID, null), new Interest(INTEREST_2_ID, null));
+        insertUserInterest.execute(Map.of("user_id", USER_2.getId(), "category_id", INTEREST_1.getId(), "score", 0));
+        insertUserInterest.execute(Map.of("user_id", USER_2.getId(), "category_id", INTEREST_2.getId(), "score", 3));
+        insertUserInterest.execute(Map.of("user_id", USER_2.getId(), "category_id", INTEREST_3.getId(), "score", 3));
+        List<Interest> interests = List.of(INTEREST_1, INTEREST_2);
         
-        interestDao.updateScoreByInterests(interests, USER_ID);
+        interestDao.updateScoreByInterests(interests, USER_2.getId());
 
-        assertEquals(3, JdbcTestUtils.countRowsInTable(jdbcTemplate, TestUtils.INTEREST_TABLE));
-        assertEquals(3, JdbcTestUtils.countRowsInTable(jdbcTemplate, TestUtils.USER_INTEREST_TABLE));
-        assertEquals(1, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ?", Integer.class, INTEREST_1_ID).longValue());
-        assertEquals(4, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ?", Integer.class, INTEREST_2_ID).longValue());
-        assertEquals(3, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ?", Integer.class, id3).longValue());
+        assertEquals(TestUtils.TOTAL_INTERESTS, JdbcTestUtils.countRowsInTable(jdbcTemplate, TestUtils.INTEREST_TABLE));
+        assertEquals(TestUtils.TOTAL_USER_INTERESTS + 3, JdbcTestUtils.countRowsInTable(jdbcTemplate, TestUtils.USER_INTEREST_TABLE));
+
+        assertEquals(1, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ? AND user_id = ?", Integer.class, INTEREST_1.getId(), USER_2.getId()).intValue());
+        assertEquals(4, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ? AND user_id = ?", Integer.class, INTEREST_2.getId(), USER_2.getId()).intValue());
+        assertEquals(3, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ? AND user_id = ?", Integer.class, INTEREST_3.getId(), USER_2.getId()).intValue());
     }
     @Test
     public void testUpdateScoreByInterestsMultipleDuplicated(){
-        long id3 = insertInterest.executeAndReturnKey(Map.of("name", TestUtils.INTEREST_NEW1_NAME)).longValue();
-        insertUserInterest.execute(Map.of("user_id", USER_ID, "category_id", INTEREST_1_ID, "score", 0));
-        insertUserInterest.execute(Map.of("user_id", USER_ID, "category_id", INTEREST_2_ID, "score", 3));
-        insertUserInterest.execute(Map.of("user_id", USER_ID, "category_id", id3, "score", 3));
-        List<Interest> interests = List.of(new Interest(INTEREST_1_ID, null), new Interest(INTEREST_2_ID, null), new Interest(INTEREST_2_ID, null));
+        insertUserInterest.execute(Map.of("user_id", USER_2.getId(), "category_id", INTEREST_1.getId(), "score", 0));
+        insertUserInterest.execute(Map.of("user_id", USER_2.getId(), "category_id", INTEREST_2.getId(), "score", 3));
+        insertUserInterest.execute(Map.of("user_id", USER_2.getId(), "category_id", INTEREST_3.getId(), "score", 3));
+        List<Interest> interests = List.of(INTEREST_1, INTEREST_2, INTEREST_2);
         
-        interestDao.updateScoreByInterests(interests, USER_ID);
+        interestDao.updateScoreByInterests(interests, USER_2.getId());
 
-        assertEquals(3, JdbcTestUtils.countRowsInTable(jdbcTemplate, TestUtils.INTEREST_TABLE));
-        assertEquals(3, JdbcTestUtils.countRowsInTable(jdbcTemplate, TestUtils.USER_INTEREST_TABLE));
-        assertEquals(1, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ?", Integer.class, INTEREST_1_ID).longValue());
-        assertEquals(5, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ?", Integer.class, INTEREST_2_ID).longValue());
-        assertEquals(3, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ?", Integer.class, id3).longValue());
+        assertEquals(TestUtils.TOTAL_INTERESTS, JdbcTestUtils.countRowsInTable(jdbcTemplate, TestUtils.INTEREST_TABLE));
+        assertEquals(TestUtils.TOTAL_USER_INTERESTS + 3, JdbcTestUtils.countRowsInTable(jdbcTemplate, TestUtils.USER_INTEREST_TABLE));
+
+        assertEquals(1, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ? AND user_id = ?", Integer.class, INTEREST_1.getId(), USER_2.getId()).intValue());
+        assertEquals(5, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ? AND user_id = ?", Integer.class, INTEREST_2.getId(), USER_2.getId()).intValue());
+        assertEquals(3, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ? AND user_id = ?", Integer.class, INTEREST_3.getId(), USER_2.getId()).intValue());
     }
     @Test
     public void testUpdateScoreByInterestsMultipleEmpty(){
-        long id3 = insertInterest.executeAndReturnKey(Map.of("name", TestUtils.INTEREST_NEW1_NAME)).longValue();
-        insertUserInterest.execute(Map.of("user_id", USER_ID, "category_id", INTEREST_1_ID, "score", 0));
-        insertUserInterest.execute(Map.of("user_id", USER_ID, "category_id", INTEREST_2_ID, "score", 3));
-        insertUserInterest.execute(Map.of("user_id", USER_ID, "category_id", id3, "score", 3));
+        insertUserInterest.execute(Map.of("user_id", USER_2.getId(), "category_id", INTEREST_1.getId(), "score", 0));
+        insertUserInterest.execute(Map.of("user_id", USER_2.getId(), "category_id", INTEREST_2.getId(), "score", 3));
+        insertUserInterest.execute(Map.of("user_id", USER_2.getId(), "category_id", INTEREST_3.getId(), "score", 3));
         List<Interest> interests = List.of();
         
-        interestDao.updateScoreByInterests(interests, USER_ID);
+        interestDao.updateScoreByInterests(interests, USER_2.getId());
 
-        assertEquals(3, JdbcTestUtils.countRowsInTable(jdbcTemplate, TestUtils.INTEREST_TABLE));
-        assertEquals(3, JdbcTestUtils.countRowsInTable(jdbcTemplate, TestUtils.USER_INTEREST_TABLE));
-        assertEquals(0, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ?", Integer.class, INTEREST_1_ID).longValue());
-        assertEquals(3, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ?", Integer.class, INTEREST_2_ID).longValue());
-        assertEquals(3, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ?", Integer.class, id3).longValue());
+        assertEquals(TestUtils.TOTAL_INTERESTS, JdbcTestUtils.countRowsInTable(jdbcTemplate, TestUtils.INTEREST_TABLE));
+        assertEquals(TestUtils.TOTAL_USER_INTERESTS + 3, JdbcTestUtils.countRowsInTable(jdbcTemplate, TestUtils.USER_INTEREST_TABLE));
+
+        assertEquals(0, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ? AND user_id = ?", Integer.class, INTEREST_1.getId(), USER_2.getId()).intValue());
+        assertEquals(3, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ? AND user_id = ?", Integer.class, INTEREST_2.getId(), USER_2.getId()).intValue());
+        assertEquals(3, jdbcTemplate.queryForObject("SELECT score FROM user_interest WHERE category_id = ? AND user_id = ?", Integer.class, INTEREST_3.getId(), USER_2.getId()).intValue());
     }
 
     @Test
     public void testGetAllInterestsPaged(){
-        long id3 = insertInterest.executeAndReturnKey(Map.of("name", TestUtils.INTEREST_NEW1_NAME)).longValue();
-
-        Page<Interest> page1 = interestDao.getAllInterests(new PageParams(1, 2));
-        Page<Interest> page2 = interestDao.getAllInterests(new PageParams(2, 2));
+        Page<Interest> page1 = interestDao.getAllInterests(TestUtils.PAGE_1_DEFAULT);
+        Page<Interest> page2 = interestDao.getAllInterests(TestUtils.PAGE_2_DEFAULT);
 
         assertNotNull(page1);
         assertNotNull(page2);
@@ -398,12 +326,12 @@ public class InterestJdbcDaoTest {
         assertNotNull(page2.getContent());
         assertEquals(2, page1.getContent().size());
         assertEquals(1, page2.getContent().size());
-        assertEquals(INTEREST_1_ID.longValue(), page1.getContent().get(0).getId().longValue());
+        assertEquals(INTEREST_1.getId(), page1.getContent().get(0).getId());
         assertEquals(TestUtils.INTEREST_1_NAME, page1.getContent().get(0).getName());
-        assertEquals(INTEREST_2_ID.longValue(), page1.getContent().get(1).getId().longValue());
+        assertEquals(INTEREST_2.getId(), page1.getContent().get(1).getId());
         assertEquals(TestUtils.INTEREST_2_NAME, page1.getContent().get(1).getName());
-        assertEquals(id3, page2.getContent().get(0).getId().longValue());
-        assertEquals(TestUtils.INTEREST_NEW1_NAME, page2.getContent().get(0).getName());
+        assertEquals(INTEREST_3.getId(), page2.getContent().get(0).getId());
+        assertEquals(TestUtils.INTEREST_3_NAME, page2.getContent().get(0).getName());
     }
     @Test
     public void testGetAllInterestsPagedNoInterests(){
@@ -419,8 +347,6 @@ public class InterestJdbcDaoTest {
 
     @Test
     public void testSearchBySubstringNoFiltering(){
-        insertInterest.execute(Map.of("name", TestUtils.INTEREST_NEW1_NAME));
-
         Page<Interest> page1 = interestDao.searchBySubstring(TestUtils.INTEREST_1_NAME.substring(0, 5), new PageParams(1, 3));
 
         assertNotNull(page1);
@@ -437,8 +363,6 @@ public class InterestJdbcDaoTest {
     }
     @Test
     public void testSearchBySubstringEmpty(){
-        insertInterest.execute(Map.of("name", TestUtils.INTEREST_NEW1_NAME));
-
         Page<Interest> page1 = interestDao.searchBySubstring("", new PageParams(1, 3));
 
         assertNotNull(page1);
@@ -447,8 +371,6 @@ public class InterestJdbcDaoTest {
     }
     @Test
     public void testSearchBySubstringMissing(){
-        insertInterest.execute(Map.of("name", TestUtils.INTEREST_NEW1_NAME));
-
         Page<Interest> page1 = interestDao.searchBySubstring(null, new PageParams(1, 3));
 
         assertNotNull(page1);
@@ -457,10 +379,8 @@ public class InterestJdbcDaoTest {
     }
     @Test
     public void testSearchBySubstringPaging(){
-        insertInterest.execute(Map.of("name", TestUtils.INTEREST_NEW1_NAME));
-
-        Page<Interest> page1 = interestDao.searchBySubstring("", new PageParams(1, 2));
-        Page<Interest> page2 = interestDao.searchBySubstring("", new PageParams(2, 2));
+        Page<Interest> page1 = interestDao.searchBySubstring("", TestUtils.PAGE_1_DEFAULT);
+        Page<Interest> page2 = interestDao.searchBySubstring("", TestUtils.PAGE_2_DEFAULT);
 
         assertNotNull(page1);
         assertNotNull(page2);
@@ -470,36 +390,34 @@ public class InterestJdbcDaoTest {
         assertEquals(1, page2.getContent().size());
     }
 
-    @SuppressWarnings("null")
     @Test
     public void testDelete(){
-        long idToDelete = insertInterest.executeAndReturnKey(Map.of("name", TestUtils.INTEREST_NEW1_NAME)).longValue();
+        interestDao.delete(INTEREST_3.getId());
 
-        interestDao.delete(idToDelete);
-
-        assertEquals(2, jdbcTemplate.queryForObject("SELECT COUNT(*) FROM category",Integer.class).intValue());
+        assertEquals(TestUtils.TOTAL_INTERESTS - 1, JdbcTestUtils.countRowsInTable(jdbcTemplate, TestUtils.INTEREST_TABLE));
     }
-    @SuppressWarnings("null")
     @Test
     public void testDeleteWrongInterest(){
         interestDao.delete(12341234);
 
-        assertEquals(2, jdbcTemplate.queryForObject("SELECT COUNT(*) FROM category",Integer.class).intValue());
+        assertEquals(TestUtils.TOTAL_INTERESTS, JdbcTestUtils.countRowsInTable(jdbcTemplate, TestUtils.INTEREST_TABLE));
     }
 
     @Test
     public void testFindAllInterestsByUserId(){
-        insertUserInterest.execute(Map.of("user_id", USER_ID, "category_id", INTEREST_1_ID, "score", 0));
-
-        Page<Interest> interests = interestDao.findAllInterestsByUserId(USER_ID, new PageParams(1, 2));
+        Page<Interest> interests = interestDao.findAllInterestsByUserId(USER_1.getId(), TestUtils.PAGE_1_BIG);
 
         assertNotNull(interests);
         assertEquals(1, interests.getCurrentPage());
         assertEquals(1, interests.getTotalPages());
         assertNotNull(interests.getContent());
-        assertEquals(1, interests.getContent().size());
-        assertEquals(INTEREST_1_ID.longValue(), interests.getContent().getFirst().getId().longValue());
-        assertEquals(TestUtils.INTEREST_1_NAME, interests.getContent().getFirst().getName());
+        assertEquals(TestUtils.USER_1_INTERESTS, interests.getContent().size());
+        assertEquals(INTEREST_1.getId(), interests.getContent().get(0).getId());
+        assertEquals(TestUtils.INTEREST_1_NAME, interests.getContent().get(0).getName());
+        assertEquals(INTEREST_2.getId(), interests.getContent().get(1).getId());
+        assertEquals(TestUtils.INTEREST_2_NAME, interests.getContent().get(1).getName());
+        assertEquals(INTEREST_3.getId(), interests.getContent().get(2).getId());
+        assertEquals(TestUtils.INTEREST_3_NAME, interests.getContent().get(2).getName());
     }
 
 }
